--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "gif-expert-app",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +16,27 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "^10.4.12",
+    "gulp": "^4.0.2",
+    "gulp-avif": "^1.1.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-webp": "^4.0.1",
     "vite": "^3.0.0"
-  }
+  },
+  "description": "GifExpert App: Aplicación de Gifs vía Giphy realizada con React JS\r <p align=\"center\">\r   <a href=\"https://vitejs.dev\" target=\"_blank\" rel=\"noopener noreferrer\">\r     <img width=\"180\" src=\"https://vitejs.dev/logo.svg\" alt=\"Vite logo\">\r   </a>\r </p>\r <br/>\r <p align=\"center\">\r   <a href=\"https://npmjs.com/package/vite\"><img src=\"https://img.shields.io/npm/v/vite.svg\" alt=\"npm package\"></a>\r   <a href=\"https://nodejs.org/en/about/releases/\"><img src=\"https://img.shields.io/node/v/vite.svg\" alt=\"node compatibility\"></a>\r   <a href=\"https://github.com/vitejs/vite/actions/workflows/ci.yml\"><img src=\"https://github.com/vitejs/vite/actions/workflows/ci.yml/badge.svg?branch=main\" alt=\"build status\"></a>\r   <a href=\"https://chat.vitejs.dev\"><img src=\"https://img.shields.io/badge/chat-discord-blue?style=flat&logo=discord\" alt=\"discord chat\"></a>\r </p>\r <br/>",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/perman03/GIFExpert-App.git"
+  },
+  "author": "Frank Per'Man",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/perman03/GIFExpert-App/issues"
+  },
+  "homepage": "https://github.com/perman03/GIFExpert-App#readme"
 }
